# python-package-template

./: README.md  appConfig.ini  main.py  pyproject.toml  setup.py
my_app/: __init__.py  subpackage_a.py  subpackage_b.py
src/my_app/: __init__.py  __main__.py  conf.ini  utils.py
tests/: test_feature_a.py
