[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_app"
version = "1.0.0"
description = "Python package template"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["pytest","build"]

[project.scripts]
my_app = "my_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
my_app = ["conf.ini"]

